--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
+*, *::before, *::after{margin: 0;padding: 0; box-sizing: inherit}
+html {box-sizing: border-box; font-size: 56.25%;}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1.6rem;
 }
 
 code {
