--- a/src/components/hamburger-menu/hamburger-menu.styles.scss
+++ b/src/components/hamburger-menu/hamburger-menu.styles.scss
@@ -35,6 +35,8 @@
     line-height: 4.5rem;
     color: #000000;
 
+    //border-bottom: 1px solid #675AA5;
+
     & a {
       text-decoration: none;
       color: currentColor;
