--- a/src/pages/home/home.styles.scss
+++ b/src/pages/home/home.styles.scss
@@ -63,6 +63,7 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
+      border-radius: 4px;
     }
 
     &--morebtn {
