complete all blogs page

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 *, *::before, *::after{margin: 0;padding: 0; box-sizing: inherit}
-html {box-sizing: border-box; font-size: 56.25%;}
+html {box-sizing: border-box; font-size: 56.25%; scroll-behavior: smooth}
 
 body {
   margin: 0;
